--- a/style.css
+++ b/style.css
@@ -96,3 +96,24 @@ body {
 .container_descricao {
     padding: 2em;
 }
+
+.dispositivos_lista {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin: 5em 0;
+}
+
+.dispositivos {
+    text-align: center;
+}
+
+.dispositivos_titulo {
+    font-size: 3rem;
+    color: var(--cor-principal);
+}
+
+.lista_item {
+    font-size: 2rem;
+    color: var(--cor-principal);
+}
